# cpp-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  config.h.in  main.cpp  stdafx.h
tests/: CMakeLists.txt  main.cpp  simpletest.cpp
